Traduccion de whatsnew/2.7 al 31% (#1219)
Co-authored-by: Cristián Maureira-Fredes <cmaureir@users.noreply.github.com>

--- a/whatsnew/2.7.po
+++ b/whatsnew/2.7.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-05-05 12:54+0200\n"
-"PO-Revision-Date: 2020-12-16 18:23-0300\n"
+"PO-Revision-Date: 2021-03-23 18:50-0300\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1070,12 +1070,21 @@ msgid ""
 "code is being used by checking :data:`sys.float_repr_style`,  which will be "
 "``short`` if the new code is in use and ``legacy`` if it isn't."
 msgstr ""
+"La biblioteca de redondeo responsable de esta mejora funciona en Windows y "
+"en plataformas Unix utilizando los compiladores gcc, icc o suncc.  Puede "
+"haber un pequeño número de plataformas donde no se puede garantizar el "
+"correcto funcionamiento de este código, por lo que el código no se utiliza "
+"en dichos sistemas.  Puede averiguar qué código se está utilizando marcando :"
+"data:`sys.float_repr_style`, que será ``short`` si el nuevo código está en "
+"uso y ``legacy`` si no lo está."
 
 #: ../Doc/whatsnew/2.7.rst:757
 msgid ""
 "Implemented by Eric Smith and Mark Dickinson, using David Gay's :file:`dtoa."
 "c` library; :issue:`7117`."
 msgstr ""
+"Implementado por Eric Smith y Mark Dickinson, utilizando la biblioteca de "
+"David Gay's :file:`dtoa.c`; :issue:`7117`."
 
 #: ../Doc/whatsnew/2.7.rst:760
 msgid ""
@@ -1086,22 +1095,32 @@ msgid ""
 "2.7 now approximates more closely.  For example, Python 2.6 computed the "
 "following::"
 msgstr ""
+"Las conversiones de enteros largos y enteros normales a punto flotante ahora "
+"redondean de forma diferente, devolviendo el número de punto flotante más "
+"cercano al número.  Esto no importa para los enteros pequeños que se pueden "
+"convertir exactamente, pero para los números grandes que inevitablemente "
+"perderán precisión, Python 2.7 ahora se aproxima más de cerca.  Por ejemplo, "
+"Python 2.6 calculó lo siguiente::"
 
 #: ../Doc/whatsnew/2.7.rst:773
 msgid ""
 "Python 2.7's floating-point result is larger, but much closer to the true "
 "value::"
 msgstr ""
+"El resultado de punto flotante de Python 2.7 es mayor, pero mucho más cerca "
+"del valor verdadero::"
 
 #: ../Doc/whatsnew/2.7.rst:782
 msgid "(Implemented by Mark Dickinson; :issue:`3166`.)"
-msgstr ""
+msgstr "(Implementado por Mark Dickinson; :issue:`3166`.)"
 
 #: ../Doc/whatsnew/2.7.rst:784
 msgid ""
 "Integer division is also more accurate in its rounding behaviours.  (Also "
 "implemented by Mark Dickinson; :issue:`1811`.)"
 msgstr ""
+"La división de enteros también es más precisa en sus comportamientos de "
+"redondeo. (También implementado por Mark Dickinson; :issue:`1811`.)"
 
 #: ../Doc/whatsnew/2.7.rst:787
 msgid ""
@@ -1109,6 +1128,9 @@ msgid ""
 "no longer ever attempt to call a :meth:`__coerce__` method on complex "
 "objects.  (Removed by Meador Inge and Mark Dickinson; :issue:`5211`.)"
 msgstr ""
+"Se ha eliminado la coerción implícita para números complejos; el intérprete "
+"ya no intentará llamar a un método :meth:`__coerce__` en objetos complejos.  "
+"(Eliminado por Meador Inge y Mark Dickinson; :issue:`5211`.)"
 
 #: ../Doc/whatsnew/2.7.rst:791
 #, python-format
@@ -1117,6 +1139,9 @@ msgid ""
 "replacement fields.  This makes using :meth:`str.format` more closely "
 "resemble using ``%s`` formatting::"
 msgstr ""
+"El método :meth:`str.format` ahora admite la numeración automática de los "
+"campos de reemplazo.  Esto hace que el uso de :meth:`str.format` se parezca "
+"más al uso del formato ``%s``::"
 
 #: ../Doc/whatsnew/2.7.rst:800
 msgid ""
@@ -1127,6 +1152,13 @@ msgid ""
 "fields or none of them -- but you can mix auto-numbering and named fields, "
 "as in the second example above.  (Contributed by Eric Smith; :issue:`5237`.)"
 msgstr ""
+"La numeración automática toma los campos de izquierda a derecha, por lo que "
+"el primer especificador ``{...}`` usará el primer argumento a :meth:`str."
+"format`, el siguiente especificador usará el siguiente argumento, y así "
+"sucesivamente.  No puede mezclar la numeración automática y la numeración "
+"explícita -- o numeran todos los campos especificados o ninguno de ellos -- "
+"pero puede mezclar la numeración automática y los campos con nombre, como en "
+"el segundo ejemplo anterior.  (Contribuido por Eric Smith; :issue:`5237`.)"
 
 #: ../Doc/whatsnew/2.7.rst:807
 msgid ""
@@ -1136,6 +1168,12 @@ msgid ""
 "width and alignment is applied to the whole of the resulting ``1.5+3j`` "
 "output.  (Contributed by Eric Smith; :issue:`1588` and :issue:`7988`.)"
 msgstr ""
+"Los números complejos ahora admiten correctamente el uso con :func:`format` "
+"y, por defecto, están alineados a la derecha. Especificar una precisión o "
+"separación de comas se aplica a las partes reales e imaginarias del número, "
+"pero un ancho de campo y una alineación especificados se aplica a la "
+"totalidad de la salida ''1.5+3j'' resultante.  (Contribuido por Eric Smith; :"
+"issue:`1588` y :issue:`7988`.)"
 
 #: ../Doc/whatsnew/2.7.rst:814
 msgid ""
@@ -1143,6 +1181,9 @@ msgid ""
 "characters, so it will now produce 'INF' and 'NAN'. (Contributed by Eric "
 "Smith; :issue:`3382`.)"
 msgstr ""
+"El código de formato 'F' ahora siempre da formato a su salida utilizando "
+"caracteres en mayúsculas, por lo que ahora producirá 'INF' y 'NAN'. "
+"(Contribuido por Eric Smith; :issue:`3382`.)"
 
 #: ../Doc/whatsnew/2.7.rst:818
 msgid ""
@@ -1155,16 +1196,28 @@ msgid ""
 "alignment or precision, presumably you're expecting the formatting to be "
 "applied in some object-specific way.  (Fixed by Eric Smith; :issue:`7994`.)"
 msgstr ""
+"Un cambio de bajo nivel: el método :meth:`object.__format__` ahora "
+"desencadena un :exc:`PendingDeprecationWarning` si se pasa una cadena de "
+"formato, porque el método :meth:`__format__` para :class:`object` convierte "
+"el objeto en una representación de cadena y da formato a eso.  "
+"Anteriormente, el método aplicaba silenciosamente la cadena de formato a la "
+"representación de cadena, pero eso podía ocultar errores en el código de "
+"Python.  Si proporciona información de formato, como una alineación o una "
+"precisión, presumiblemente espera que el formato se aplique de alguna manera "
+"específica del objeto.  (Arreglado por Eric Smith; :issue:`7994`.)"
 
 #: ../Doc/whatsnew/2.7.rst:828
 msgid ""
 "The :func:`int` and :func:`long` types gained a ``bit_length`` method that "
 "returns the number of bits necessary to represent its argument in binary::"
 msgstr ""
+"Los tipos :func:`int` y :func:`long` obtuvieron un método ``bit_length`` que "
+"devuelve el número de bits necesarios para representar su argumento en "
+"binario::"
 
 #: ../Doc/whatsnew/2.7.rst:843
 msgid "(Contributed by Fredrik Johansson and Victor Stinner; :issue:`3439`.)"
-msgstr ""
+msgstr "(Contribuido por Fredrik Johansson y Victor Stinner; :issue:`3439`.)"
 
 #: ../Doc/whatsnew/2.7.rst:845
 msgid ""
@@ -1173,6 +1226,11 @@ msgid ""
 "could possibly break certain :keyword:`!import` statements that were only "
 "working by accident.  (Fixed by Meador Inge; :issue:`7902`.)"
 msgstr ""
+"La instrucción :keyword:`import` ya no intentará una importación absoluta si "
+"se produce un error en una importación relativa (por ejemplo, ``from .os "
+"import sep``).  Esto corrige un error, pero posiblemente podría romper "
+"ciertas instrucciones :keyword:`!import` que solo funcionaban por "
+"accidente.  (Arreglado por Meador Inge; :issue:`7902`.)"
 
 #: ../Doc/whatsnew/2.7.rst:851
 msgid ""
@@ -1180,6 +1238,9 @@ msgid ""
 "override the :meth:`__unicode__` method.  (Implemented by Victor Stinner; :"
 "issue:`1583863`.)"
 msgstr ""
+"Ahora es posible que una subclase del tipo integrado :class:`unicode` "
+"reemplace el método :meth:`__unicode__`.  (Implementado por Victor Stinner; :"
+"issue:`1583863`.)"
 
 #: ../Doc/whatsnew/2.7.rst:855
 msgid ""
@@ -1187,6 +1248,9 @@ msgid ""
 "accepts ``None`` as its first argument.  (Fixed by Georg Brandl; :issue:"
 "`4759`.)"
 msgstr ""
+"El método :meth:`~bytearray.translate` del tipo :class:`bytearray` ahora "
+"acepta ``None`` como su primer argumento.  (Arreglado por Georg Brandl; :"
+"issue:`4759`.)"
 
 #: ../Doc/whatsnew/2.7.rst:861
 msgid ""
@@ -1195,6 +1259,10 @@ msgid ""
 "their :attr:`__func__` attribute. (Contributed by Amaury Forgeot d'Arc, "
 "after a suggestion by George Sakkis; :issue:`5982`.)"
 msgstr ""
+"Cuando se usa ``@classmethod`` y ``@staticmethod`` para envolver métodos "
+"como clase o métodos estáticos, el objeto decorador ahora expone la función "
+"decoradora como su atributo :attr:`__func__`. (Contribuido por Amaury "
+"Forgeot d'Arc, después de una sugerencia de George Sakkis; :issue:`5982`.)"
 
 #: ../Doc/whatsnew/2.7.rst:867 ../Doc/whatsnew/2.7.rst:2462
 msgid ""
@@ -1202,6 +1270,10 @@ msgid ""
 "an unset attribute would not raise :exc:`AttributeError` as you would "
 "expect.  Fixed by Benjamin Peterson; :issue:`7604`.)"
 msgstr ""
+"Cuando se estableció un conjunto restringido de atributos mediante "
+"``__slots__``, eliminar un atributo desarmado no llamaría :exc:"
+"`AttributeError` como cabría esperar.  Corregido por Benjamin Peterson; :"
+"issue:`7604`.)"
 
 #: ../Doc/whatsnew/2.7.rst:871
 msgid ""
@@ -1210,6 +1282,11 @@ msgid ""
 "contributed by Alexander Belchenko and Amaury Forgeot d'Arc in :issue:"
 "`1616979`; CP858 contributed by Tim Hatch in :issue:`8016`.)"
 msgstr ""
+"Ahora se admiten dos nuevas codificaciones: \"cp720\", que se utiliza "
+"principalmente para texto árabe; y \"cp858\", una variante de CP 850 que "
+"añade el símbolo del euro.  (CP720 contribuido por Alexander Belchenko y "
+"Amaury Forgeot d'Arc en :issue:`1616979`; CP858 contribuido por Tim Hatch "
+"en :issue:`8016`.)"
 
 #: ../Doc/whatsnew/2.7.rst:877
 msgid ""
@@ -1219,6 +1296,12 @@ msgid ""
 "forbids writing to read-only file objects instead of trusting the C library "
 "to catch and report the error (fixed by Stefan Krah; :issue:`5677`)."
 msgstr ""
+"El objeto :class:`file` ahora establecerá el atributo :attr:`filename` en la "
+"excepción :exc:`IOError` al intentar abrir un directorio en plataformas "
+"POSIX (señalada por Jan Kaliszewski; :issue:`4764`), y ahora comprueba "
+"explícitamente y prohíbe escribir en objetos de archivo de solo lectura en "
+"lugar de confiar en la biblioteca C para detectar e informar del error "
+"(arreglado por Stefan Krah; :issue:`5677`)."
 
 #: ../Doc/whatsnew/2.7.rst:884
 msgid ""
@@ -1227,6 +1310,10 @@ msgid ""
 "convention.  Additionally, it no longer requires that the code end in a "
 "newline."
 msgstr ""
+"El tokenizador de Python ahora traduce las terminaciones de línea por sí "
+"mismo, por lo que la función integrada :func:`compile` ahora acepta código "
+"mediante cualquier convención de fin de línea.  Además, ya no requiere que "
+"el código finalice en una nueva línea."
 
 #: ../Doc/whatsnew/2.7.rst:889
 msgid ""
@@ -1235,6 +1322,11 @@ msgid ""
 "mode, Python 2.7 will now warn about this odd usage. (Noted by James "
 "Lingard; :issue:`7362`.)"
 msgstr ""
+"Los paréntesis adicionales en las definiciones de función son ilegales en "
+"Python 3.x, lo que significa que se obtiene un error de sintaxis de ``def "
+"f((x)): pass``.  En el modo de advertencia Python3, Python 2.7 ahora "
+"advertirá sobre este uso no común. (Anotado por James Lingard; :"
+"issue:'7362'.)"
 
 #: ../Doc/whatsnew/2.7.rst:894
 msgid ""
@@ -1242,6 +1334,9 @@ msgid ""
 "style classes were always weak-referenceable.  (Fixed by Antoine Pitrou; :"
 "issue:`8268`.)"
 msgstr ""
+"Ahora es posible crear referencias débiles a objetos de clase de estilo "
+"antiguo.  Las clases de estilo nuevo siempre eran de referencia débil.  "
+"(Corregido por Antoine Pitrou; :issue:`8268`.)"
 
 #: ../Doc/whatsnew/2.7.rst:898
 msgid ""
@@ -1249,10 +1344,12 @@ msgid ""
 "only cleared if no one else is holding a reference to the dictionary (:issue:"
 "`7140`)."
 msgstr ""
+"Cuando se recicla un objeto de módulo, el diccionario del módulo ahora solo "
+"se borra si nadie más tiene una referencia al diccionario (:issue:`7140`)."
 
 #: ../Doc/whatsnew/2.7.rst:907
 msgid "Interpreter Changes"
-msgstr ""
+msgstr "Cambios en el intérprete"
 
 #: ../Doc/whatsnew/2.7.rst:909
 msgid ""
@@ -1261,6 +1358,11 @@ msgid ""
 "equivalent to those used with the :option:`-W` switch, separated by commas. "
 "(Contributed by Brian Curtin; :issue:`7301`.)"
 msgstr ""
+"Una nueva variable de entorno, :envvar:`PYTHONWARNINGS`, permite controlar "
+"las advertencias.  Debe establecerse en una cadena que contenga la "
+"configuración de advertencia, equivalente a las utilizadas con el "
+"modificador :option:`-W`, separado por comas. (Contribuido por Brian "
+"Curtin; :issue:`7301`.)"
 
 #: ../Doc/whatsnew/2.7.rst:915
 msgid ""
@@ -1269,14 +1371,18 @@ msgid ""
 "exact syntax for setting an environment variable varies across operating "
 "systems and shells.)"
 msgstr ""
+"Por ejemplo, la siguiente configuración imprimirá advertencias cada vez que "
+"se produzcan, pero convertirá las advertencias del módulo :mod:`Cookie` en "
+"un error.  (La sintaxis exacta para establecer una variable de entorno varía "
+"entre sistemas operativos y vaciados.)"
 
 #: ../Doc/whatsnew/2.7.rst:928
 msgid "Optimizations"
-msgstr ""
+msgstr "Optimizaciones"
 
 #: ../Doc/whatsnew/2.7.rst:930
 msgid "Several performance enhancements have been added:"
-msgstr ""
+msgstr "Se han añadido varias mejoras de rendimiento:"
 
 #: ../Doc/whatsnew/2.7.rst:932
 msgid ""
@@ -1284,6 +1390,9 @@ msgid ""
 "statements, looking up the :meth:`__enter__` and :meth:`__exit__` methods.  "
 "(Contributed by Benjamin Peterson.)"
 msgstr ""
+"Se agregó un nuevo código de operación para realizar la configuración "
+"inicial de las instrucciones :keyword:`with`, buscando los métodos :meth:"
+"`__enter__` y :meth:`__exit__`.  (Contribución de Benjamin Peterson.)"
 
 #: ../Doc/whatsnew/2.7.rst:936
 #, python-format
@@ -1298,6 +1407,16 @@ msgid ""
 "objects in the oldest generation.  (Suggested by Martin von Löwis and "
 "implemented by Antoine Pitrou; :issue:`4074`.)"
 msgstr ""
+"El recolector de elementos no utilizados ahora funciona mejor para un patrón "
+"de uso común: cuando se asignan muchos objetos sin desasignar ninguno de "
+"ellos.  Esto anteriormente tomaría tiempo cuadrático para la recolección de "
+"elementos no utilizados, pero ahora el número de colecciones de elementos no "
+"utilizados completas se reduce a medida que crece el número de objetos en el "
+"montón. La nueva lógica solo realiza un paso completo de recolección de "
+"elementos no utilizados cuando la generación media se ha recopilado 10 veces "
+"y cuando el número de objetos supervivientes de la generación media supera "
+"el 10% del número de objetos de la generación más antigua.  (Sugerido por "
+"Martin von Löwis e implementado por Antoine Pitrou; :issue:`4074`.)"
 
 #: ../Doc/whatsnew/2.7.rst:947
 msgid ""
