--- a/c-api/bool.po
+++ b/c-api/bool.po
@@ -43,8 +43,8 @@ msgid ""
 "Return true if *o* is of type :c:data:`PyBool_Type`.  This function always "
 "succeeds."
 msgstr ""
-"Retorna verdadero si *o* es de tipo :c:data:`PyBool_Type`. Esta función siempre "
-"finaliza con éxito."
+"Retorna verdadero si *o* es de tipo :c:data:`PyBool_Type`. Esta función "
+"siempre finaliza con éxito."
 
 #: ../Doc/c-api/bool.rst:22
 msgid ""
