--- a/whatsnew/2.2.po
+++ b/whatsnew/2.2.po
@@ -1661,7 +1661,7 @@ msgid ""
 "mod:`os` module, and :func:`localtime`, :func:`gmtime`, and :func:`strptime` "
 "in the :mod:`time` module."
 msgstr ""
-"Varias funciones que originalmente lvían tuplas largas ahora retornan pseudo-"
+"Varias funciones que originalmente retornaban tuplas largas ahora retornan pseudo-"
 "secuencias que siguen comportándose como tuplas pero que también tienen "
 "atributos mnemónicos como memberst_mtime o :attr:`tm_year`. Las funciones "
 "mejoradas incluyen :func:`stat`, :func:`fstat`, :func:`statvfs` y :func:"
