--- a/whatsnew/2.2.po
+++ b/whatsnew/2.2.po
@@ -1661,12 +1661,12 @@ msgid ""
 "mod:`os` module, and :func:`localtime`, :func:`gmtime`, and :func:`strptime` "
 "in the :mod:`time` module."
 msgstr ""
-"Varias funciones que originalmente retornaban tuplas largas ahora retornan pseudo-"
-"secuencias que siguen comportándose como tuplas pero que también tienen "
-"atributos mnemónicos como memberst_mtime o :attr:`tm_year`. Las funciones "
-"mejoradas incluyen :func:`stat`, :func:`fstat`, :func:`statvfs` y :func:"
-"`fstatvfs` en el módulo :mod:`os`, y :func:`localtime`, :func:`gmtime` y :"
-"func:`strptime` en el módulo :mod:`time`."
+"Varias funciones que originalmente retornaban tuplas largas ahora retornan "
+"pseudo-secuencias que siguen comportándose como tuplas pero que también "
+"tienen atributos mnemónicos como memberst_mtime o :attr:`tm_year`. Las "
+"funciones mejoradas incluyen :func:`stat`, :func:`fstat`, :func:`statvfs` y :"
+"func:`fstatvfs` en el módulo :mod:`os`, y :func:`localtime`, :func:`gmtime` "
+"y :func:`strptime` en el módulo :mod:`time`."
 
 #: ../Doc/whatsnew/2.2.rst:972
 msgid ""
