--- a/whatsnew/2.5.po
+++ b/whatsnew/2.5.po
@@ -1069,7 +1069,7 @@ msgid ""
 "objects for use with this statement."
 msgstr ""
 "La sentencia ':keyword:`with`' aclara el código que antes utilizaba bloques "
-"``try...finally`' para asegurar que se ejecuta el código de limpieza.  En "
+"``try...finally``' para asegurar que se ejecuta el código de limpieza.  En "
 "esta sección, hablaré de la sentencia tal y como se utiliza habitualmente.  "
 "En la siguiente sección, examinaré los detalles de la implementación y "
 "mostraré cómo escribir objetos para usar con esta sentencia."
@@ -3456,7 +3456,7 @@ msgstr "``elem[n]``"
 #: ../Doc/whatsnew/2.5.rst:1810
 #, fuzzy
 msgid "Returns n'th child element."
-msgstr "Devuelve el n'º elemento hijo."
+msgstr "Devuelve el elemento hijo enésimo."
 
 #: ../Doc/whatsnew/2.5.rst:1812
 #, fuzzy
@@ -3516,7 +3516,7 @@ msgstr "``del elem[n]``"
 #: ../Doc/whatsnew/2.5.rst:1823
 #, fuzzy
 msgid "Deletes n'th child element."
-msgstr "Elimina el n'º elemento hijo."
+msgstr "Elimina el elemento hijo enésimo."
 
 #: ../Doc/whatsnew/2.5.rst:1825
 #, fuzzy
