--- a/whatsnew/2.6.po
+++ b/whatsnew/2.6.po
@@ -503,7 +503,7 @@ msgid ""
 "objects for use with this statement."
 msgstr ""
 "La sentencia ':keyword:`with`' aclara el código que antes utilizaba bloques "
-"``try...finally`' para asegurar que se ejecuta el código de limpieza.  En "
+"``try...finally``' para asegurar que se ejecuta el código de limpieza.  En "
 "esta sección, hablaré de la sentencia tal y como se utiliza habitualmente.  "
 "En la siguiente sección, examinaré los detalles de la implementación y "
 "mostraré cómo escribir objetos para usar con esta sentencia."
@@ -1301,8 +1301,8 @@ msgid ""
 "documentation for a :ref:`complete list <formatstrings>`; here's a sample:"
 msgstr ""
 "Hay una gran variedad de tipos de presentación disponibles.  Consulte la "
-"documentación de la versión 2.6 para obtener una lista completa "
-"<formatstrings>; aquí tiene un ejemplo:</formatstrings>"
+"documentación de la versión 2.6 para obtener una :ref:`lista completa "
+"<formatstrings>`; aquí tiene un ejemplo:"
 
 #: ../Doc/whatsnew/2.6.rst:810
 #, fuzzy
@@ -2749,7 +2749,7 @@ msgid ""
 "``except Exception:`` will not inadvertently catch :exc:`GeneratorExit`. "
 "(Contributed by Chad Austin; :issue:`1537`.)"
 msgstr ""
-"La excepción :exc:`GeneratorExit` ahora subclasa :exc:`BaseException` en "
+"La excepción :exc:`GeneratorExit` ahora deriva :exc:`BaseException` en "
 "lugar de :exc:`Exception`.  Esto significa que un manejador de excepciones "
 "que haga ``except Exception:`` no atrapará inadvertidamente :exc:"
 "`GeneratorExit`. (Contribuido por Chad Austin; :issue:`1537`.)"
@@ -3043,7 +3043,7 @@ msgstr ""
 "``latin-1``; la parte opcional *errorhandler* especifica qué hacer con los "
 "caracteres que no pueden ser manejados por la codificación, y debe ser una "
 "de las opciones \"error\", \"ignorar\" o \"reemplazar\".   (Contribución de "
-"Martin von Löwis)</errorhandler></encoding></encoding>"
+"Martin von Löwis)"
 
 #: ../Doc/whatsnew/2.6.rst:1783
 #, fuzzy
@@ -3958,7 +3958,7 @@ msgstr ""
 "Los objetos :class:`Random` del módulo :mod:`random` ahora pueden ser "
 "decapados en un sistema de 32 bits y desencapsulados en un sistema de 64 "
 "bits, y viceversa.  Desafortunadamente, este cambio también significa que "
-"los objetos :class:`Random` de Python 2.6 no pueden ser despickeados "
+"los objetos :class:`Random` de Python 2.6 no pueden ser deserializados "
 "correctamente en versiones anteriores de Python. (Contribuido por Shawn "
 "Ligocki; :issue:`1727780`.)"
 
@@ -4766,9 +4766,9 @@ msgstr ""
 "todas las aplicaciones.  El código que utiliza :mod:`xmlrpclib` debe "
 "convertir las instancias :class:`date` y :class:`~datetime.time`. (:issue:"
 "`1330538`) El código también puede manejar fechas anteriores a 1900 "
-"(contribución de Ralf Schmitt;<i8>:issue</i8>:`2014`) y enteros de 64 bits "
-"representados mediante el uso de<i8>```` en las respuestas XML-RPC "
-"(contribución de Riku Lindblad; :issue:`2985`).</i8>"
+"(contribución de Ralf Schmitt; :issue:`2014`) y enteros de 64 bits "
+"representados mediante el uso de ``<i8>`` en las respuestas XML-RPC "
+"(contribución de Riku Lindblad; :issue:`2985`)."
 
 #: ../Doc/whatsnew/2.6.rst:2639
 #, fuzzy
@@ -4876,7 +4876,7 @@ msgstr ""
 #: ../Doc/whatsnew/2.6.rst:2747
 #, fuzzy
 msgid "The :mod:`future_builtins` module"
-msgstr "El módulo :mod:`future_builtins"
+msgstr "El módulo :mod:`future_builtins`"
 
 #: ../Doc/whatsnew/2.6.rst:2749
 #, fuzzy
@@ -5491,8 +5491,8 @@ msgstr ""
 "listas internas de objetos libres que pueden reutilizarse.  Las estructuras "
 "de datos para estas listas libres siguen ahora una convención de "
 "nomenclatura: la variable se llama siempre ``lista_libre``, el contador se "
-"llama siempre ``numfree``, y<typename>siempre se define</typename> una macro "
-"``Py_MAXFREELIST``<typename>.</typename>"
+"llama siempre ``numfree``, y siempre se define una macro "
+"``Py<typename>_MAXFREELIST``."
 
 #: ../Doc/whatsnew/2.6.rst:3081
 #, fuzzy
