--- a/whatsnew/3.4.po
+++ b/whatsnew/3.4.po
@@ -4356,7 +4356,7 @@ msgid ""
 "Vajrasky Kok in :issue:`19201`, :issue:`19222`, and :issue:`19223`.)"
 msgstr ""
 "Las funciones del módulo :mod:`bz2`, :mod:`lzma` y :mod:`gzip` ahora "
-"soportan el modo ``x` (creación exclusiva).  (Contribución de Tim Heaney y "
+"soportan el modo ``x`` (creación exclusiva).  (Contribución de Tim Heaney y "
 "Vajrasky Kok en :issue:`19201`, :issue:`19222` y :issue:`19223`)"
 
 #: ../Doc/whatsnew/3.4.rst:2012
@@ -5278,7 +5278,7 @@ msgid ""
 msgstr ""
 "El constructor :class:`complex`, a diferencia de las funciones :mod:`cmath`, "
 "aceptaba incorrectamente valores :class:`float` si el método especial "
-"``__complex__` de un objeto devolvía uno.  Ahora se produce un error :exc:"
+"``__complex__`` de un objeto devolvía uno.  Ahora se produce un error :exc:"
 "`TypeError`. (:issue:`16290`.)"
 
 #: ../Doc/whatsnew/3.4.rst:2394
