Traducción final y fuzzy de whatsnew 3.7/3.8

--- a/whatsnew/3.7.po
+++ b/whatsnew/3.7.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-03-19 11:16+0100\n"
-"PO-Revision-Date: 2020-10-12 05:44-0500\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2021-08-16 23:02+0200\n"
+"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es_EC\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.8.0\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/whatsnew/3.7.rst:3
 msgid "What's New In Python 3.7"
@@ -171,9 +172,8 @@ msgid ":ref:`PEP 552 <whatsnew37-pep552>`, deterministic .pycs"
 msgstr ":ref:`PEP 552 <whatsnew37-pep552>`, determinista *.pycs*"
 
 #: ../Doc/whatsnew/3.7.rst:105
-#, fuzzy
 msgid ":ref:`New Python Development Mode <whatsnew37-devmode>`"
-msgstr ":ref:`el nuevo modo de ejecución de desarrollo <whatsnew37-devmode>`"
+msgstr ":ref:`El nuevo modo de ejecución de desarrollo <whatsnew37-devmode>`"
 
 #: ../Doc/whatsnew/3.7.rst:106
 msgid ""
@@ -302,9 +302,8 @@ msgstr ""
 "`__future__`:"
 
 #: ../Doc/whatsnew/3.7.rst:174
-#, fuzzy
 msgid "It will become the default in Python 3.10."
-msgstr "Se convertirá en el predeterminado en Python 4.0."
+msgstr "Se convertirá en el predeterminado en Python 3.10."
 
 #: ../Doc/whatsnew/3.7.rst:178
 msgid ":pep:`563` -- Postponed evaluation of annotations"
@@ -921,9 +920,8 @@ msgstr ""
 "Stinner*."
 
 #: ../Doc/whatsnew/3.7.rst:483
-#, fuzzy
 msgid "Python Development Mode (-X dev)"
-msgstr "Modo de tiempo de ejecución de desarrollo: -X *dev*"
+msgstr "Modo de desarrollo de Python (-X dev)"
 
 #: ../Doc/whatsnew/3.7.rst:485
 msgid ""
@@ -934,6 +932,12 @@ msgid ""
 "See :ref:`Python Development Mode <devmode>` documentation for the full "
 "description."
 msgstr ""
+"La nueva opción :option:`-X` ``dev`` opción de línea de comando o la nueva "
+"variable de entorno :envvar:`PYTHONDEVMODE` se puede usar para habilitar :"
+"ref:`Python Development Mode <devmode>`. Cuando está en modo de desarrollo, "
+"Python realiza comprobaciones de tiempo de ejecución adicionales que son "
+"demasiado caras para habilitarse de forma predeterminada. Ver :ref:`Python "
+"Development Mode <devmode>` documentación para la descripción completa."
 
 #: ../Doc/whatsnew/3.7.rst:494
 msgid "Other Language Changes"
@@ -1189,14 +1193,13 @@ msgstr ""
 "incluyen:"
 
 #: ../Doc/whatsnew/3.7.rst:639
-#, fuzzy
 msgid ""
 "The new :term:`provisional <provisional API>` :func:`asyncio.run` function "
 "can be used to run a coroutine from synchronous code by automatically "
 "creating and destroying the event loop. (Contributed by Yury Selivanov in :"
 "issue:`32314`.)"
 msgstr ""
-"La nueva función :term:`provisional <provisional api>` :func:`asyncio.run` "
+"La nueva función :term:`provisional <provisional API>` :func:`asyncio.run` "
 "se puede utilizar para ejecutar una corrutina desde código síncrono creando "
 "y destruyendo automáticamente el bucle de eventos. (Contribuido por *Yury "
 "Selivanov* en :issue:`32314`.)"
@@ -2595,7 +2598,6 @@ msgstr ""
 "Heimes* en :issue:`31399`.)"
 
 #: ../Doc/whatsnew/3.7.rst:1335
-#, fuzzy
 msgid ""
 "The improved host name check requires a *libssl* implementation compatible "
 "with OpenSSL 1.0.2 or 1.1.  Consequently, OpenSSL 0.9.8 and 1.0.1 are no "
@@ -2604,9 +2606,9 @@ msgid ""
 msgstr ""
 "La verificación mejorada del nombre de host requiere una implementación "
 "*libssl* compatible con OpenSSL 1.0.2 o 1.1. En consecuencia, OpenSSL 0.9.8 "
-"y 1.0.1 ya no son compatibles (consulte :ref:`37-platform-support-removals` "
-"para más detalles). El módulo *ssl* es principalmente compatible con "
-"LibreSSL 2.7.2 y versiones posteriores."
+"y 1.0.1 ya no son compatibles (consulte :ref:`37-platform-support-removes` "
+"para más detalles). El módulo ssl es principalmente compatible con LibreSSL "
+"2.7.2 y versiones posteriores."
 
 #: ../Doc/whatsnew/3.7.rst:1340
 msgid ""
@@ -5132,9 +5134,8 @@ msgstr ""
 "Pitrou*, y *Yury Selivanov* en :issue:`37228`.)"
 
 #: ../Doc/whatsnew/3.7.rst:2561
-#, fuzzy
 msgid "Notable changes in Python 3.7.10"
-msgstr "Cambios notables en Python 3.7.1"
+msgstr "Cambios notables en Python 3.7.10"
 
 #: ../Doc/whatsnew/3.7.rst:2563
 msgid ""
@@ -5147,6 +5148,15 @@ msgid ""
 "For more details, please see their respective documentation. (Contributed by "
 "Adam Goldschmidt, Senthil Kumaran and Ken Jin in :issue:`42967`.)"
 msgstr ""
+"Las versiones anteriores de Python permitían usar tanto ``;`` como ``&`` "
+"como separadores de parámetros de consulta en :func:`urllib.parse.parse_qs` "
+"y :func:`urllib.parse.parse_qsl`. Debido a problemas de seguridad y para "
+"cumplir con las recomendaciones más recientes del W3C, esto se ha cambiado "
+"para permitir solo una clave separadora, con ``&`` como valor "
+"predeterminado. Este cambio también afecta a :func:`cgi.parse` y :func:`cgi."
+"parse_multipart` ya que utilizan las funciones afectadas internamente. Para "
+"obtener más detalles, consulte su documentación respectiva. (Contribuido por "
+"Adam Goldschmidt, Senthil Kumaran y Ken Jin en :issue:`42967`.)"
 
 #~ msgid ""
 #~ "The new :option:`-X` ``dev`` command line option or the new :envvar:"
