--- a/whatsnew/3.8.po
+++ b/whatsnew/3.8.po
@@ -9,15 +9,16 @@ msgstr ""
 "Project-Id-Version: Python en Español 3.7\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-03-19 11:16+0100\n"
-"PO-Revision-Date: 2020-10-16 21:15+0200\n"
-"Last-Translator: Francisco Jesús Sevilla García <fjsevilla.dev@gmail.com>\n"
+"PO-Revision-Date: 2021-08-16 23:07+0200\n"
+"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es_ES\n"
 "Language-Team: \n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.8.0\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/whatsnew/3.8.rst:3
 msgid "What's New In Python 3.8"
@@ -355,7 +356,7 @@ msgstr ""
 #: ../Doc/whatsnew/3.8.rst:254
 msgid "f-strings support ``=`` for self-documenting expressions and debugging"
 msgstr ""
-"Los f-strings soportan ``=`` para expresiones autodocumentadas y depuración"
+"los f-strings soportan ``=`` para expresiones autodocumentadas y depuración"
 
 #: ../Doc/whatsnew/3.8.rst:256
 msgid ""
@@ -584,21 +585,19 @@ msgid "(Contributed by Victor Stinner in :issue:`36763`.)"
 msgstr "(Contribución de Victor Stinner en :issue:`36763`.)"
 
 #: ../Doc/whatsnew/3.8.rst:350
-#, fuzzy
 msgid "PEP 590: Vectorcall: a fast calling protocol for CPython"
-msgstr "Vectorcall: un protocolo de invocación rápida para CPython"
+msgstr "PEP 590: Vectorcall: un protocolo de llamada rápida para CPython"
 
 #: ../Doc/whatsnew/3.8.rst:352
-#, fuzzy
 msgid ""
 ":ref:`vectorcall` is added to the Python/C API. It is meant to formalize "
 "existing optimizations which were already done for various classes. Any "
 "static type implementing a callable can use this protocol."
 msgstr ""
-"El protocolo \"vectorcall\" se ha agregado a la API de Python/C. Tiene como "
-"objetivo formalizar las optimizaciones existentes que ya se realizaron para "
-"varias clases. Cualquier tipo de extensión que implemente un invocable puede "
-"utilizar este protocolo."
+":ref:`vectorcall` se agrega a la API de Python/C. Está destinado a "
+"formalizar las optimizaciones existentes que ya se realizaron para varias "
+"clases. Cualquier tipo estático que implemente un invocable puede utilizar "
+"este protocolo."
 
 #: ../Doc/whatsnew/3.8.rst:357
 msgid ""
@@ -613,11 +612,12 @@ msgid "See :pep:`590` for a full description."
 msgstr "Consultar :pep:`590` para obtener una descripción completa."
 
 #: ../Doc/whatsnew/3.8.rst:362
-#, fuzzy
 msgid ""
 "(Contributed by Jeroen Demeyer, Mark Shannon and Petr Viktorin in :issue:"
 "`36974`.)"
-msgstr "(Contribución de Jeroen Demeyer y Mark Shannon en :issue:`36974`.)"
+msgstr ""
+"(Contribución de Jeroen Demeyer, Mark Shannon y Petr Viktorin en :issue:"
+"`36974`.)"
 
 #: ../Doc/whatsnew/3.8.rst:366
 msgid "Pickle protocol 5 with out-of-band data buffers"
@@ -1037,7 +1037,6 @@ msgid "(Contributed by Yury Selivanov in :issue:`37028`.)"
 msgstr "(Contribución de Yury Selivanov en :issue:`37028`.)"
 
 #: ../Doc/whatsnew/3.8.rst:648 ../Doc/whatsnew/3.8.rst:1964
-#, fuzzy
 msgid ""
 "The exception :class:`asyncio.CancelledError` now inherits from :class:"
 "`BaseException` rather than :class:`Exception` and no longer inherits from :"
@@ -1045,8 +1044,9 @@ msgid ""
 "in :issue:`32528`.)"
 msgstr ""
 "La excepción :class:`asyncio.CancelledError` ahora hereda de :class:"
-"`BaseException` en vez de :class:`Exception`. (Contribución de Yury "
-"Selivanov en :issue:`32528`.)"
+"`BaseException` en lugar de :class:`Exception` y ya no hereda de :class:"
+"`concurrent.futures.CancelledError`. (Contribuido por Yury Selivanov en :"
+"issue:`32528`.)"
 
 #: ../Doc/whatsnew/3.8.rst:653
 msgid ""
@@ -1410,20 +1410,23 @@ msgstr ""
 
 #: ../Doc/whatsnew/3.8.rst:873
 msgid "New in 3.8.1:"
-msgstr ""
+msgstr "Nuevo en 3.8.1:"
 
 #: ../Doc/whatsnew/3.8.rst:875
-#, fuzzy
 msgid ""
 "Add option to toggle cursor blink off.  (Contributed by Zackery Spytz in :"
 "issue:`4603`.)"
-msgstr "(Contribución de Zackery Spytz en :issue:`33407`.)"
+msgstr ""
+"Agregue la opción para desactivar el parpadeo del cursor. (Contribuido por "
+"Zackery Spytz en :issue:`4603`.)"
 
 #: ../Doc/whatsnew/3.8.rst:878
 msgid ""
 "Escape key now closes IDLE completion windows.  (Contributed by Johnny "
 "Najera in :issue:`38944`.)"
 msgstr ""
+"La tecla Escape ahora cierra las ventanas de finalización IDLE. (Contribuido "
+"por Johnny Najera en :issue:`38944`.)"
 
 #: ../Doc/whatsnew/3.8.rst:881
 msgid "The changes above have been backported to 3.7 maintenance releases."
@@ -1436,6 +1439,8 @@ msgid ""
 "Add keywords to module name completion list.  (Contributed by Terry J. Reedy "
 "in :issue:`37765`.)"
 msgstr ""
+"Agrega palabras clave a la lista de finalización del nombre del módulo. "
+"(Contribución de Terry J. Reedy en :issue:`37765`.)"
 
 #: ../Doc/whatsnew/3.8.rst:887
 msgid "inspect"
@@ -2986,7 +2991,6 @@ msgstr ""
 "estado rotas durante mucho tiempo."
 
 #: ../Doc/whatsnew/3.8.rst:1701
-#, fuzzy
 msgid ""
 "Function :func:`~gettext.bind_textdomain_codeset`, methods :meth:`~gettext."
 "NullTranslations.output_charset` and :meth:`~gettext.NullTranslations."
@@ -2995,12 +2999,12 @@ msgid ""
 "since they are only used for the ``l*gettext()`` functions. (Contributed by "
 "Serhiy Storchaka in :issue:`33710`.)"
 msgstr ""
-"La función :func:`~gettext.bind_textdomain_codeset`, los métodos :meth:"
-"`~gettext.NullTranslations.output_charset` y :meth:`~gettext."
-"NullTranslations.set_output_charset` y el parámetro *codeset* de las "
-"funciones :func:`~gettext.translation` y :func:`~gettext.install` están "
-"también obsoletos, dado que solo son usados para las funciones "
-"``l*gettext()``. (Contribución de Serhiy Storchaka en :issue:`33710`.)"
+"Función :func:`~gettext.bind_textdomain_codeset`, métodos :meth:`~gettext."
+"NullTranslations.output_charset` y :meth:`~gettext.NullTranslations."
+"set_output_charset`, y el parámetro *codeset* de las funciones :func:"
+"`~gettext .translation` y :func:`~gettext.install` también están en desuso, "
+"ya que solo se usan para las funciones ``l*gettext()``. (Contribución de "
+"Serhiy Storchaka en :issue:`33710`.)"
 
 #: ../Doc/whatsnew/3.8.rst:1709
 msgid ""
@@ -3980,9 +3984,8 @@ msgstr ""
 "Pitrou y Yury Selivanov en :issue:`37228`.)"
 
 #: ../Doc/whatsnew/3.8.rst:2239
-#, fuzzy
 msgid "Notable changes in Python 3.8.8"
-msgstr "Cambios notables en Python 3.8.3"
+msgstr "Cambios notables en Python 3.8.8"
 
 #: ../Doc/whatsnew/3.8.rst:2241
 msgid ""
@@ -3995,6 +3998,15 @@ msgid ""
 "For more details, please see their respective documentation. (Contributed by "
 "Adam Goldschmidt, Senthil Kumaran and Ken Jin in :issue:`42967`.)"
 msgstr ""
+"Las versiones anteriores de Python permitían usar tanto ``;`` como ``&`` "
+"como separadores de parámetros de consulta en :func:`urllib.parse.parse_qs` "
+"y :func:`urllib.parse.parse_qsl`. Debido a problemas de seguridad y para "
+"cumplir con las recomendaciones más recientes del W3C, esto se ha cambiado "
+"para permitir solo una clave separadora, con ``&`` como valor "
+"predeterminado. Este cambio también afecta a :func:`cgi.parse` y :func:`cgi."
+"parse_multipart` ya que utilizan las funciones afectadas internamente. Para "
+"obtener más detalles, consulte su documentación respectiva. (Contribuido por "
+"Adam Goldschmidt, Senthil Kumaran y Ken Jin en :issue:`42967`.)"
 
 #~ msgid "Python 3.8 was released on October 14th, 2019."
 #~ msgstr "Python 3.8 fue lanzado el 14 de octubre de 2019."
