Cambiando devolver -> retornar

--- a/whatsnew/3.5.po
+++ b/whatsnew/3.5.po
@@ -129,7 +129,7 @@ msgid ""
 "being iterated by ``yield from`` expressions. (Contributed by Benno Leslie "
 "and Yury Selivanov in :issue:`24450`.)"
 msgstr ""
-"Los generadores tienen un nuevo atributo ``gi_yieldfrom``, el cual devuelve "
+"Los generadores tienen un nuevo atributo ``gi_yieldfrom``, el cual retorna "
 "el objeto que está siendo iterado por expresiones ``yield from``. "
 "(Contribución de Benno Leslie y Yury Selivanov en :issue:`24450`.)"
 
@@ -1785,7 +1785,7 @@ msgid ""
 "TestSuite` if *module* contains no docstrings, instead of raising :exc:"
 "`ValueError`.  (Contributed by Glenn Jones in :issue:`15916`.)"
 msgstr ""
-"La función :func:`~doctest.DocTestSuite` devuelve una clase :class:`unittest."
+"La función :func:`~doctest.DocTestSuite` retorna una clase :class:`unittest."
 "TestSuite` vacía si *module* no contiene docstrings, en lugar de lanzar :exc:"
 "`ValueError`. (Contribución de Glenn Jones en :issue:`15916`.)"
 
