last test to get pre-commit to work

--- a/whatsnew/2.3.po
+++ b/whatsnew/2.3.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-05-06 11:59-0400\n"
-"PO-Revision-Date: 2021-08-07 11:27+0100\n"
+"PO-Revision-Date: 2021-08-20 17:14+0100\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -150,7 +150,6 @@ msgstr ""
 "agraciado nombre :meth:`symmetric_difference_update`. ::"
 
 #: ../Doc/whatsnew/2.3.rst:100
-#, fuzzy
 msgid ""
 "There are also :meth:`issubset` and :meth:`issuperset` methods for checking "
 "whether one set is a subset or superset of another::"
@@ -159,12 +158,10 @@ msgstr ""
 "un conjunto es subconjunto o superconjunto de otro::"
 
 #: ../Doc/whatsnew/2.3.rst:117
-#, fuzzy
 msgid ":pep:`218` - Adding a Built-In Set Object Type"
-msgstr ":pep:`218` - Añadir un tipo de objeto de conjunto incorporado"
+msgstr ":pep:`218` - Añadiendo un tipo de objeto de conjunto incorporado"
 
 #: ../Doc/whatsnew/2.3.rst:117
-#, fuzzy
 msgid ""
 "PEP written by Greg V. Wilson. Implemented by Greg V. Wilson, Alex Martelli, "
 "and GvR."
@@ -173,12 +170,10 @@ msgstr ""
 "Martelli y GvR."
 
 #: ../Doc/whatsnew/2.3.rst:126
-#, fuzzy
 msgid "PEP 255: Simple Generators"
 msgstr "PEP 255: Generadores simples"
 
 #: ../Doc/whatsnew/2.3.rst:128
-#, fuzzy
 msgid ""
 "In Python 2.2, generators were added as an optional feature, to be enabled "
 "by a ``from __future__ import generators`` directive.  In 2.3 generators no "
@@ -198,7 +193,6 @@ msgstr ""
 "de esta sección."
 
 #: ../Doc/whatsnew/2.3.rst:136
-#, fuzzy
 msgid ""
 "You're doubtless familiar with how function calls work in Python or C. When "
 "you call a function, it gets a private namespace where its local variables "
@@ -279,7 +273,6 @@ msgstr ""
 "generate_ints(3)``."
 
 #: ../Doc/whatsnew/2.3.rst:189
-#, fuzzy
 msgid ""
 "Inside a generator function, the :keyword:`return` statement can only be "
 "used without a value, and signals the end of the procession of values; "
@@ -289,7 +282,7 @@ msgid ""
 "indicated by raising :exc:`StopIteration` manually, or by just letting the "
 "flow of execution fall off the bottom of the function."
 msgstr ""
-"Dentro de una función generadora, la sentencia :keyword:`return` sólo puede "
+"Dentro de una función generadora, la expresión :keyword:`return` sólo puede "
 "usarse sin un valor, y señala el final de la procesión de valores; después "
 "el generador no puede retornar más valores. :keyword:`!return` con un valor, "
 "como ``return 5``, es un error de sintaxis dentro de una función "
@@ -298,7 +291,6 @@ msgstr ""
 "que el flujo de ejecución caiga en el fondo de la función."
 
 #: ../Doc/whatsnew/2.3.rst:197
-#, fuzzy
 msgid ""
 "You could achieve the effect of generators manually by writing your own "
 "class and storing all the local variables of the generator as instance "
