--- a/whatsnew/3.5.po
+++ b/whatsnew/3.5.po
@@ -11,16 +11,15 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-03-19 11:16+0100\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2021-08-22 09:20-0300\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"Last-Translator: José Luis Salgado Banda\n"
 "Language: es_MX\n"
 "X-Generator: Poedit 2.4.2\n"
+"Last-Translator: \n"
 
 #: ../Doc/whatsnew/3.5.rst:3
 msgid "What's New In Python 3.5"
@@ -1806,7 +1805,7 @@ msgstr ""
 "\"`` en los cuerpos del correo electrónico tienen el prefijo de un caracter "
 "``\">\"`` por generadores. El valor predeterminado es ``True`` para :attr:"
 "`~email.policy.compat32` y ``False`` para todas las demás directivas. "
-"(Contribución de Milan Oberkirch en :issue:`20098`.)"
+"(Contribución de Milan OberKirch en :issue:`20098`.)"
 
 #: ../Doc/whatsnew/3.5.rst:1104
 msgid ""
@@ -2028,7 +2027,7 @@ msgstr ""
 "`6855` (soporte UTF-8) a través del método :meth:`IMAP4.enable() <imaplib."
 "IMAP4.enable>`. Un nuevo atributo :attr:`IMAP4.utf8_enabled <imaplib.IMAP4."
 "utf8_enabled>` rastrea si el soporte con :rfc:`6855` está habilitado o no. "
-"(Contribución de Milan Oberkirch, R. David Murray y Maciej Szulik en :issue:"
+"(Contribución de Milan OberKirch, R. David Murray y Maciej Szulik en :issue:"
 "`21800`.)"
 
 #: ../Doc/whatsnew/3.5.rst:1247
@@ -2039,7 +2038,7 @@ msgid ""
 msgstr ""
 "Ahora el módulo :mod:`imaplib` codifica automáticamente nombres de usuario y "
 "contraseñas de cadenas de caracteres no ASCII usando UTF-8, como recomiendan "
-"las RFCs. (Contribución de Milan Oberkirch en :issue:`21800`.)"
+"las RFCs. (Contribución de Milan OberKirch en :issue:`21800`.)"
 
 #: ../Doc/whatsnew/3.5.rst:1253
 msgid "imghdr"
@@ -2776,7 +2775,7 @@ msgstr ""
 "(:rfc:`6152`) si *decode_data* se establece como ``True``. Si el cliente "
 "especifica ``BODY=8BITMIME`` en el comando ``MAIL``, se pasa al método :meth:"
 "`SMTPServer.process_message() <smtpd.SMTPServer.process_message>` a través "
-"de la palabra clave *mail_options*. (Contribución de Milan Oberkirch y R. "
+"de la palabra clave *mail_options*. (Contribución de Milan OberKirch y R. "
 "David Murray en :issue:`21795`.)"
 
 #: ../Doc/whatsnew/3.5.rst:1684
@@ -2795,7 +2794,7 @@ msgstr ""
 "pasan al método :meth:`SMTPServer.process_message() <smtpd.SMTPServer."
 "process_message>` a través de la palabra clave *mail_options*. Es "
 "responsabilidad del método ``process_message`` manejar correctamente los "
-"datos ``SMTPUTF8``. (Contribución de Milan Oberkirch en :issue:`21725`.)"
+"datos ``SMTPUTF8``. (Contribución de Milan OberKirch en :issue:`21725`.)"
 
 #: ../Doc/whatsnew/3.5.rst:1692
 msgid ""
@@ -2805,7 +2804,7 @@ msgid ""
 msgstr ""
 "Ahora es posible proporcionar, directamente o mediante resolución de "
 "nombres, direcciones IPv6 en el constructor :class:`~smtpd.SMTPServer`, y "
-"hacer que se conecte correctamente. (Contribución de Milan Oberkirch en :"
+"hacer que se conecte correctamente. (Contribución de Milan OberKirch en :"
 "issue:`14758`.)"
 
 #: ../Doc/whatsnew/3.5.rst:1698
@@ -2820,7 +2819,7 @@ msgid ""
 msgstr ""
 "Un nuevo método :meth:`SMTP.auth() <smtplib.SMTP.auth>` proporciona una "
 "forma conveniente de implementar mecanismos de autenticación personalizados. "
-"(Contribución de Milan Oberkirch en :issue:`15014`.)"
+"(Contribución de Milan OberKirch en :issue:`15014`.)"
 
 #: ../Doc/whatsnew/3.5.rst:1704
 msgid ""
@@ -2843,7 +2842,7 @@ msgid ""
 msgstr ""
 "Ahora los métodos :meth:`SMTP.sendmail() <smtplib.SMTP.sendmail>` y :meth:"
 "`SMTP.send_message() <smtplib.SMTP.send_message>` admiten :rfc:`6531` "
-"(SMTPUTF8). (Contribución de Milan Oberkirch y R. David Murray en :issue:"
+"(SMTPUTF8). (Contribución de Milan OberKirch y R. David Murray en :issue:"
 "`22027`.)"
 
 #: ../Doc/whatsnew/3.5.rst:1715
